kubernetes/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-activity
  labels:
    app: user-activity
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-activity
  template:
    metadata:
      labels:
        app: user-activity
    spec:
      containers:
      - name: user-activity
        image: WEB_DOCKER_IMAGE
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
