kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-activity-service
spec:
  selector:
    app: user-activity
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
