kubernetes/base/ingress.yml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "user-activity-ingress"
  namespace: "default"
  annotations:
    networking.gke.io/managed-certificates: user-activity-api
    kubernetes.io/ingress.global-static-ip-name: user-activity-api
    kubernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: "user-activity"
    servicePort: 80
